# discord

./: .gitignore  README.md  pyproject.toml
src/endstone_discord/: __init__.py  client.py  config.toml  discord_plugin.py
