[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-discord"
version = "0.0.1"
dependencies = [
    "discord.py"
]
authors = [
    { name = "Vincent Wu", email = "magicdroidx@gmail.com" },
]
description = "A Discord plugin for Endstone servers"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin", "discord"]

[project.urls]
Homepage = "https://github.com/wu-vincent/endstone-discord"

[project.entry-points."endstone"]
discord = "endstone_discord:DiscordPlugin"